responive-login-sign-up

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,26 +3,32 @@
   @tailwind utilities;
     @layer utilities {
       .backgoundGradient {
-        @apply bg-[radial-gradient(circle_at_bottom_left,_var(--tw-gradient-stops))] from-pink-400 via-pink-50 to-pink-400; 
-    }
-    .signin-button {
-      @apply border-2 border-melanie-600 md:px-14 md:py-5 rounded-[8px] md:text-xl font-bold bg-melanie-500  text-melanie-200 ;
-    }
-    .subscribe-button {
-      @apply border-2 border-melanie-600 md:px-14 md:py-5 rounded-[8px] md:text-xl font-bold bg-melanie-500  text-melanie-200 ;
-    }
-    .login-signup{
-      @apply border-2 border-melanie-600 md:px-14 md:py-5 rounded-[8px] md:text-xl font-bold bg-melanie-300  text-melanie-800 ;
-    }
-    .faq-q{
-      @apply text-base md:text-xl font-bold text-melanie-600 mt-14;
-    }
-    .login-signup-bg{
-      @apply bg-gradient-to-b from-melanie-300 via-melanie-400 to-melanie-600 border border-melanie-500;
-    }
-    .faq-a{
-      @apply text-sm md:text-lg font-medium mt-8;
-    }
+          @apply bg-[radial-gradient(circle_at_bottom_left,_var(--tw-gradient-stops))] from-pink-400 via-pink-50 to-pink-400; 
+      }
+      .signin-button {
+        @apply border-2 border-melanie-600 md:px-14 md:py-5 rounded-[8px] md:text-xl font-bold bg-melanie-500  text-melanie-200 ;
+      }
+      .subscribe-button {
+        @apply border-2 border-melanie-600 md:px-14 md:py-5 rounded-[8px] md:text-xl font-bold bg-melanie-500  text-melanie-200 ;
+      }
+      .login-signup{
+        @apply border-2 border-melanie-600 md:px-14 md:py-5 rounded-[8px] md:text-xl font-bold bg-melanie-300  text-melanie-800 ;
+      }
+      .faq-q{
+        @apply text-base md:text-xl font-bold text-melanie-600 mt-14;
+      }
+      .login-signup-bg{
+        @apply bg-gradient-to-b from-melanie-300 via-melanie-400 to-melanie-600 border border-melanie-500;
+      }
+      .login-signup-input{
+        @apply rounded-[6px] bg-melanie-800 appearance-none border-melanie-500 shadow-xl text-melanie-100 py-4;
+      }
+      .term-condition-label{
+        @apply sm:text-sm font-medium leading-none text-melanie-950 peer-disabled:cursor-not-allowed peer-disabled:opacity-70 hover:underline;
+      }
+      .faq-a{
+        @apply text-sm md:text-lg font-medium mt-8;
+      }
   }
 
   * {
